--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,301 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@import url('https://cdn-uicons.flaticon.com/uicons-solid-straight/css/uicons-solid-straight.css');
+@import url('https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css');
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
+*{
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.StyledGrommet-sc-19lkkz7-0{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+nav{
+  border-radius: 0px 0px 5px 5px;
+  background-color: rgb(250, 245, 245) !important;
+  box-shadow: 5px 5px 10px rgb(106, 105, 105) !important;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.mainDiv{
+  height: calc(100vh - 58px);
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 375px;
+  align-items: center;
+  box-shadow: 5px 5px 10px grey;
+  border-radius: 5px 5px 0 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.StyledGrommet-sc-19lkkz7-0{
+  display: flex;
+  justify-content: center;
+}
+
+.stat{
+  display: flex;
+  color: white;
+  position: relative;
+  align-items: center;
+  height: 200px;
+}
+
+.fi-ss-tomato{
+  font-size: 2rem;
+}
+
+.stat > div{
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+  font-size: 0.9rem;
+  justify-content: center;
+}
+
+.stat > div  span:nth-child(2){
+  margin-top: 5px;
+  font-size: 20px;
+  font-weight: 1000;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.task{
+  color: orange;
+  border-radius: 5px;
+  width: 350px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  box-shadow: 2px 2px 10px grey;
+  padding: 5px 10px;
+  margin: 7px 0;
+  font-family: 'Ubuntu', sans-serif;
+  align-items: center;
+  cursor: pointer;
+}
+
+.task:hover{
+  transform: scale(1.01);
+}
+
+.taskDiv, .timerDiv{
+  width: 375px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  height: calc(100vh - 58px - 50px);
+  /* overflow-x: visible;
+  overflow-y: auto; */
+  overflow-y: auto;
+}
+
+.taskDiv::-webkit-scrollbar{
+  width: 5px;
+}
+
+.taskDiv::-webkit-scrollbar-thumb{
+  width: 5px;
+  background: rgb(43, 43, 43);
+  border-radius: 5px;
+}
+
+.fi-ss-add{
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  font-size: 2rem;
+  position: absolute;
+  bottom: 80px;
+  right: 0;
+  transform: translate(20px, 20px);
+  z-index: 1;
+}
+
+.fi-ss-add:hover{
+  filter: drop-shadow(2px 2px 5px grey);
+}
+
+.deadline{
+  font-size: 0.8rem;
+  font-family: Poppins, sans-serif;
+  font-weight: 500;
+}
+
+.descrp{
+  background-color: rgb(237, 227, 227);
+  padding: 5px 10px;
+  border-radius: 0 0 5px 5px;
+  font-size: 0.9rem;
+  width: 350px;
+  filter: drop-shadow(1px 1px 1px grey);
+  white-space: pre-wrap;
+}
+
+.newTask{
+  width: 350px;
+  border-radius: 5px;
+  border: 1px solid grey;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 20px;
+  box-shadow: 2px 2px 5px grey;
+  height: 250px;
+  position: absolute;
+  left: 12.5px;
+  top: calc(50vh - 54px - 125px);
+  background-color: white;
+}
+
+.newTask > input, .newTask > textarea{
+  margin-bottom: 5px;
+  padding: 5px 10px;
+  width: 100%;
+}
+
+.newTask > input[type="submit"]{
+  background-color: rgb(0, 0, 0);
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.newTask > input[type="submit"]:hover{
+  filter: drop-shadow(2px 2px 5px grey);
+}
+
+.newTask > textarea{
+  resize: none;
+  height: 100px;
+}
+
+.timerNav{
+  width: 375px;
+  display: flex;
+  flex-direction: row;
+  padding: 5px 20px;
+  justify-content: space-between;
+  font-family: 'Ubuntu', sans-serif;
+  color: grey;
+  margin-top: 10px;
+}
+
+.timerNav > span{
+  cursor: pointer;
+  transition: all 1s;
+}
+
+.timerNav > span:hover{
+  color: orange;
+}
+
+.timer{
+  position: absolute;
+  top: 170px;
+  background-color: transparent;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: rgb(69, 64, 64);
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.fi-ss-circle-xmark, .fi-rr-rotate-right{
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.fi-ss-pause-circle, .fi-ss-play{
+  font-size: 4rem;
+  cursor: pointer;
+}
+
+.setComp{
+  width: 375px;
+  background-color: white;
+  border-bottom: solid 1px grey;
+  /* border-top: solid 1px grey; */
+  padding: 5px 20px;
+  font-size: 0.9rem;
+  font-weight: 500;
+  /* font-family:  */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.setComp > span{
+  display: flex;
+  align-items: center;
+}
+
+.fi-ss-toggle-off{
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+.StyledIcon-sc-ofa7kd-0:hover{
+  cursor: pointer;
+  transition: all 0.5s;
+  transform: scale(1.1);
+}
+
+.timerDiv .fi:hover{
+  transform: scale(0.9);
+  transition: all 0.5s;
+  filter: drop-shadow(2px 2px 5px grey);
+}
+
+.circle{
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  z-index: 1;
+  display: flex;
+  margin-right: 5px;
+}
+
+.label > span{
+  display: flex;
+  align-items: center;
+}
+
+.pie{
+  position: relative;
+  /* border: solid 2px grey; */
+  margin-top: 20px;
+  border-radius: 20px;
+  box-shadow: 2px 2px 10px grey;
+  /* filter: drop-shadow(2px 2px 5px black); */
+}
+
+.taskLabel{
+  position: absolute;
+  left: 80px;
+  color: white;
+  font-family: Ubuntu;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.bar{
+  width: 350px;
+  padding: 10px 20px 5px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* margin-top: 20px; */
+  border-radius: 15px;
+  box-shadow: 2px 2px 10px grey;
+}
+
+.barChart{
+  width: 340px;
+  transform: translateX(20px);
 }
